deployment/k8s/app-asset-depoloyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-assets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-assets
  template:
    metadata:
      labels:
        app: app-assets
    spec:
      containers:
        - name: app-assets
          image: nelsonsoria/app-assets:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: app-assets-service
spec:
  type: ClusterIP
  selector:
    app: app-assets
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
