deployment/k8s/app-tickets-depoloyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-tickets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-tickets
  template:
    metadata:
      labels:
        app: app-tickets
    spec:
      containers:
        - name: app-tickets
          image: nelsonsoria/app-tickets:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: app-tickets-service
spec:
  type: ClusterIP
  selector:
    app: app-tickets
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
